--- a/src/app/datatable/generictable/generictable.component.html
+++ b/src/app/datatable/generictable/generictable.component.html
@@ -8,15 +8,11 @@
                 <td mat-cell *matCellDef="let element; let i = index">
                     <div fxLayout="row">
                         <div fxLayout="column">{{element[index.control]}}</div>
-<!--                        <div fxLayout="column" *ngIf="index.control === 'pSolverDetails' ">-->
-<!--                            <button mat-raised-button [routerLink]="['edit',i]" >edit</button>-->
-<!--                            <button mat-raised-button (click)="deleteFn(i)">delete</button>-->
-
-<!--                        </div>-->
+                        <div fxLayout="column" *ngIf="index.control === 'date' ">
+                            <button mat-raised-button [routerLink]="['/edit',i]" >edit</button>
+                            <button mat-raised-button (click)="dlfn(i)">delete</button>
+                        </div>
                     </div>
-
-
-
                 </td>
 
             </ng-container>
