--- a/src/app/addproducts/addproducts.component.html
+++ b/src/app/addproducts/addproducts.component.html
@@ -79,8 +79,8 @@
                     </div>
                     <div fxLayout="row" fxFlex="100">
                         <mat-form-field appearance="outline" fxFlex="100">
-                            <mat-label>Number of Items of this product</mat-label>
-                            <input matInput formControlName="Count">
+                            <mat-label>Origin</mat-label>
+                            <input matInput formControlName="Origin">
                         </mat-form-field>
                     </div>
 
