--- a/src/app/edit-products/edit-products.component.html
+++ b/src/app/edit-products/edit-products.component.html
@@ -14,13 +14,13 @@
                         <div fxLayout="column" fxFlex="50">
                             <mat-form-field appearance="outline" fxFlex="100">
                                 <mat-label>Product Name</mat-label>
-                                <input matInput formControlName="ProductName">
+                                <input matInput formControlName="name">
                             </mat-form-field>
                         </div>
                         <div fxLayout="column" fxFlex="50">
                             <mat-form-field appearance="outline" fxFlex="100">
                                 <mat-label>Product Short Code</mat-label>
-                                <input matInput formControlName="ProductShortCode">
+                                <input matInput formControlName="psc">
                             </mat-form-field>
                         </div>
                     </div>
@@ -28,9 +28,9 @@
                         <div fxLayout="column" fxFlex="50">
                             <mat-form-field appearance="outline">
                                 <mat-label>Category</mat-label>
-                                <mat-select formControlName="Category">
+                                <mat-select formControlName="category">
                                     <div *ngFor="let category of CategoryList">
-                                        <mat-option value="category">{{category}}</mat-option>
+                                        <mat-option [value]="category">{{category}}</mat-option>
                                     </div>
                                 </mat-select>
                             </mat-form-field>
@@ -38,7 +38,7 @@
                         <div fxLayout="column" fxFlex="50">
                             <mat-form-field appearance="outline">
                                 <mat-label>Price</mat-label>
-                                <input matInput formControlName="Price">
+                                <input matInput formControlName="price">
                             </mat-form-field>
                         </div>
                     </div>
@@ -48,14 +48,14 @@
                             <mat-label>
                                 Description
                             </mat-label>
-                            <input matInput formControlName="Description">
+                            <input matInput formControlName="description">
                         </mat-form-field>
                     </div>
 
                     <div fxLayout="row" fxFlex="100">
                         <mat-form-field appearance="outline" fxFlex="100">
                             <mat-label>Image Url</mat-label>
-                            <input matInput formControlName="ImageSource">
+                            <input matInput formControlName="src">
                         </mat-form-field>
                     </div>
 
@@ -63,7 +63,7 @@
                         <div fxLayout="column" fxFlex="50">
                             <mat-form-field appearance="outline" fxFlex="100">
                                 <mat-label>IsBestAchieved</mat-label>
-                                <mat-select formControlName="IsBestAchieved">
+                                <mat-select formControlName="isbest">
                                     <mat-option value="Yes">Yes</mat-option>
                                     <mat-option value="No">No</mat-option>
                                 </mat-select>
@@ -71,7 +71,7 @@
                         </div>
                         <div fxLayout="column" fxFlex="50">
                             <mat-form-field appearance="outline">
-                                <input matInput formControlName="CreatedDate" [matDatepicker]="picker" placeholder="Choose a date">
+                                <input matInput formControlName="date" [matDatepicker]="picker" placeholder="Choose a date">
                                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
                             </mat-form-field>
@@ -80,12 +80,12 @@
                     <div fxLayout="row" fxFlex="100">
                         <mat-form-field appearance="outline" fxFlex="100">
                             <mat-label>Number of Items of this product</mat-label>
-                            <input matInput formControlName="Count">
+                            <input matInput formControlName="count">
                         </mat-form-field>
                     </div>
 
                     <div fxLayout="row" fxLayoutAlign="end center">
-                        <button mat-raised-button color="primary" (click)="addProduct()" routerLink="/dashboard">ADD</button>
+                        <button mat-raised-button color="primary" (click)="saveProduct()" routerLink="/products">Save</button>
                     </div>
                 </div>
             </mat-card>
