--- a/src/app/datatable/generictable/generictable.component.html
+++ b/src/app/datatable/generictable/generictable.component.html
@@ -8,9 +8,9 @@
                 <td mat-cell *matCellDef="let element; let i = index">
                     <div fxLayout="row">
                         <div fxLayout="column">{{element[index.control]}}</div>
-                        <div fxLayout="column" *ngIf="index.control === 'date' ">
-                            <button mat-raised-button [routerLink]="['/edit',i]" >edit</button>
-                            <button mat-raised-button (click)="dlfn(i)">delete</button>
+                        <div fxLayout="column" *ngIf="index.control === 'option' ">
+                            <button mat-raised-button [routerLink]="['/edit',element.id]">edit</button>
+                            <button mat-raised-button (click)="dlfn(element.id)">delete</button>
                         </div>
                     </div>
                 </td>
